--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -200,16 +200,24 @@
             <td th:text="${order.payment.totalAmount}"></td>
             <td>
                 <p th:if="${order.orderStatus != 'PENDING'}" th:text="${order.payment.amountPaid}"></p>
-                <!--                Modal trigger button -->
-                <a
-                        class="text-decoration-none"
-                        th:if="${order.orderStatus == 'PENDING'}"
-                        role="button"
-                        data-bs-toggle="modal"
-                        th:attr="data-bs-target=|#update-order-${order.orderId}-amount|"
-                        th:text="${order.payment.amountPaid}"
-                        href="#">
-                </a>
+                <div class="btn-group">
+                    <!--                Modal trigger button -->
+                    <button
+                            class="btn btn-sm btn-outline-primary"
+                            th:if="${order.orderStatus == 'PENDING'}"
+                            role="button"
+                            data-bs-toggle="modal"
+                            th:attr="data-bs-target=|#update-order-${order.orderId}-amount|"
+                            th:text="${order.payment.amountPaid}">
+                    </button>
+                    <button type="button" class="btn btn-sm btn-primary dropdown-toggle dropdown-toggle-split"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Paid</a></li>
+                        <li><a class="dropdown-item" href="#">Unpaid</a></li>
+                    </ul>
+                </div>
 
                 <!--                Modal  -->
                 <div class="modal fade"
@@ -260,7 +268,6 @@
                 <!--                Modal ends -->
 
             </td>
-            <td th:text="${order.payment.paymentStatus}"></td>
             <td th:text="${order.orderStatus}"></td>
             <td>
                 <a class="btn btn-success btn-sm" th:href="@{/update-order?id={id}(id=${order.orderId})}" title="Update">
