Added div tag around outer buttons

--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -18,8 +18,10 @@
 <body>
 <div class="container-sm">
 <div th:insert="~{general.html :: navbar}"></div>
-<a type="button" class="btn btn-outline-primary" href="/add-employee">Add employee</a>
-<a class="btn btn-outline-primary" href="/roles">Roles</a>
+    <div>
+        <a type="button" class="btn btn-outline-primary btn-sm" href="/add-employee">Add employee</a>
+        <a class="btn btn-outline-primary btn-sm" href="/roles">Roles</a>
+    </div>
     <br>
     <table class="table table-hover border">
         <thead class="table-light">
